red_and_pint_ghosts_test